Refactored ProfilesPanel and ExercisesPanel to use fixed arrays.