@@ -10,6 +10,7 @@ import javax.swing.table.DefaultTableModel;
 import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Vector;
 
@@ -27,7 +28,7 @@ public class ExercisesPanel extends JPanel implements ActionListener {
     private static final String EXERCISE_FAVOURITE = "Favourite?";
     private static final int EXERCISE_NAME_POSITION = 0; // column for all exercise names
 
-    private static final List<String> EXERCISE_INFO = List.of(EXERCISE_NAME, EXERCISE_MUSCLE_GROUP,
+    private static final List<String> EXERCISE_INFO = Arrays.asList(EXERCISE_NAME, EXERCISE_MUSCLE_GROUP,
             EXERCISE_DIFFICULTY, EXERCISE_TIME, EXERCISE_FAVOURITE);
     private static final Vector<String> EXERCISE_INFO_VECTOR = new Vector<>(EXERCISE_INFO);
 
@@ -214,7 +215,7 @@ public class ExercisesPanel extends JPanel implements ActionListener {
     // EFFECTS: deletes the selected exercises from the display
     private void deleteSelectedExercises() {
         for (int i : exercisesDataTable.getSelectedRows()) {
-            String exerciseName = (String) tableModel.getDataVector().elementAt(i).get(EXERCISE_NAME_POSITION);
+            String exerciseName = (String) tableModel.getDataVector().elementAt(i).elementAt(EXERCISE_NAME_POSITION);
             exercisesByName.removeExercise(exerciseName);
         }
 
